[gd_scene load_steps=7 format=3 uid="uid://nvpk6cv3oksk"]

[ext_resource type="Script" uid="uid://bm1j0661qagb1" path="res://drone.gd" id="1_o36xs"]
[ext_resource type="Texture2D" uid="uid://b4fpeaxpa10j5" path="res://Assets/Sprites/Dronfixed.png" id="2_o36xs"]
[ext_resource type="AudioStream" uid="uid://cyp3ijw40ky0n" path="res://Assets/Audio/laser_sound.wav" id="3_i3b1v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3b1v"]
atlas = ExtResource("2_o36xs")
region = Rect2(0, 0, 500, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_x74uf"]
atlas = ExtResource("2_o36xs")
region = Rect2(500, 0, 500, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_x74uf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3b1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x74uf")
}],
"loop": true,
"name": &"drone",
"speed": 5.0
}]

[node name="PathFollow2D" type="PathFollow2D"]
rotates = false
script = ExtResource("1_o36xs")

[node name="DroneSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.35229373, 0.35229373)
sprite_frames = SubResource("SpriteFrames_x74uf")
animation = &"drone"
frame_progress = 0.06000851

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(4.48718, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="LsrSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_i3b1v")
pitch_scale = 0.29
